{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 104,
  "lineage": "9b4a7309-75b5-7567-9c1a-f211e6ef3b23",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "privatevm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkInterfaces/privatevm-nic",
            "internal_domain_name_suffix": "f1wmu4iemhhetfllnyhxzuzx4d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/virtualNetworks/vnetdemo/subnets/privatesubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "privatevm-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "resourcegroupdemo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.vnetdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "publicvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkInterfaces/publicvm-nic",
            "internal_domain_name_suffix": "f1wmu4iemhhetfllnyhxzuzx4d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/publicIPAddresses/publicvm-pip",
                "subnet_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/virtualNetworks/vnetdemo/subnets/publicsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "publicvm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "resourcegroupdemo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.publicvm_pip",
            "azurerm_resource_group.resourcegroupdemo",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.vnetdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "privatevm_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkInterfaces/privatevm-nic|/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/privatevm-nsg",
            "network_interface_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkInterfaces/privatevm-nic",
            "network_security_group_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/privatevm-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.privatevm_nic",
            "azurerm_network_security_group.privatevm_nsg",
            "azurerm_resource_group.resourcegroupdemo",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.vnetdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "publicvm_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkInterfaces/publicvm-nic|/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/publicvm-nsg",
            "network_interface_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkInterfaces/publicvm-nic",
            "network_security_group_id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/publicvm-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.publicvm_nic",
            "azurerm_network_security_group.publicvm_nsg",
            "azurerm_public_ip.publicvm_pip",
            "azurerm_resource_group.resourcegroupdemo",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.vnetdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgdemo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/nsgdemo",
            "location": "westeurope",
            "name": "nsgdemo",
            "resource_group_name": "resourcegroupdemo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-8080",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "managed_by": "azure-architect"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "privatevm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/privatevm-nsg",
            "location": "westeurope",
            "name": "privatevm-nsg",
            "resource_group_name": "resourcegroupdemo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "outbound-allow-all",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-443",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-5432",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-80",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "managed_by": "azure-architect"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "publicvm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/networkSecurityGroups/publicvm-nsg",
            "location": "westeurope",
            "name": "publicvm-nsg",
            "resource_group_name": "resourcegroupdemo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "outbound-allow-all",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-3306",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-443",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-allow-80",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "managed_by": "azure-architect"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicvm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/publicIPAddresses/publicvm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.41.190",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "publicvm-pip",
            "resource_group_name": "resourcegroupdemo",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "managed_by": "azure-architect"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/virtualNetworks/vnetdemo/subnets/privatesubnet",
            "name": "privatesubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "resourcegroupdemo",
            "virtual_network_name": "vnetdemo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo",
            "azurerm_virtual_network.vnetdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/virtualNetworks/vnetdemo/subnets/publicsubnet",
            "name": "publicsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "resourcegroupdemo",
            "virtual_network_name": "vnetdemo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo",
            "azurerm_virtual_network.vnetdemo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetdemo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "79caec2e-6104-49ce-956b-6e0f7cd337f3",
            "id": "/subscriptions/f8eff04a-5ddb-4242-9125-4b728a71bccd/resourceGroups/resourcegroupdemo/providers/Microsoft.Network/virtualNetworks/vnetdemo",
            "location": "westeurope",
            "name": "vnetdemo",
            "resource_group_name": "resourcegroupdemo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.resourcegroupdemo"
          ]
        }
      ]
    }
  ]
}